tests/ui/specialization/issue-39618.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-39618.rs:5:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete
   = note: `#[warn(incomplete_features)]` on by default

error[E0391]: cycle detected when computing whether impls specialize one another
  --> $DIR/issue-39618.rs:19:1
   |
LL | impl<T> Foo for T where T: Bar {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which requires evaluating trait selection obligation `u64: Bar`...
   = note: ...which again requires computing whether impls specialize one another, completing the cycle
note: cycle used when building specialization graph of trait `Foo`
  --> $DIR/issue-39618.rs:7:1
   |
LL | trait Foo {
   | ^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0391`.
